--- a/Project-sfg-pet-clinic/pet-clinic-web/src/main/resources/application.properties
+++ b/Project-sfg-pet-clinic/pet-clinic-web/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.profiles.active=de
 # Internationalization
 spring.messages.basename=messages/messages
 
+spring.datasource.url=jdbc:h2:mem:testdb
+
