--- a/Project-sfg-pet-clinic/pet-clinic-web/src/main/resources/application.properties
+++ b/Project-sfg-pet-clinic/pet-clinic-web/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.profiles.active=de
+#spring.profiles.active=map
+spring.profiles.active=springdatajpa
+
 # Internationalization
 spring.messages.basename=messages/messages
 
+#H2 db
 spring.datasource.url=jdbc:h2:mem:testdb
 
