--- a/Project-sfg-pet-clinic/pom.xml
+++ b/Project-sfg-pet-clinic/pom.xml
@@ -48,7 +48,10 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
+			<version>1.18.12</version>
+			<scope>provided</scope>
 		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
@@ -107,11 +110,6 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.19.1</version>
 			</plugin>
 		</plugins>
 	</build>
