--- a/Project-sfg-pet-clinic/pet-clinic-data/pom.xml
+++ b/Project-sfg-pet-clinic/pet-clinic-data/pom.xml
@@ -75,15 +75,14 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.19.1</version>
-				<dependencies>
-					<dependency>
-						<groupId>org.junit.platform</groupId>
-						<artifactId>junit-platform-surefire-provider</artifactId>
-						<version>1.3.2</version>
-						<scope>compile</scope>
-					</dependency>
-				</dependencies>
+<!-- 				<dependencies> -->
+<!-- 					<dependency> -->
+<!-- 						<groupId>org.junit.platform</groupId> -->
+<!-- 						<artifactId>junit-platform-surefire-provider</artifactId> -->
+<!-- 						<version>1.3.2</version> -->
+<!-- 						<scope>compile</scope> -->
+<!-- 					</dependency> -->
+<!-- 				</dependencies> -->
 			</plugin>
 		</plugins>
 	</build>
