--- a/Project-sfg-pet-clinic/pet-clinic-web/pom.xml
+++ b/Project-sfg-pet-clinic/pet-clinic-web/pom.xml
@@ -97,7 +97,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.0</version>
+				 <version>3.0.0-M5</version>
 				<configuration>
 					<argLine>-Dfile.encoding=UTF-8 -Xms1024m -Xmx1024m
 						-XX:PermSize=1024m -noverify</argLine>
