--- a/Project-sfg-pet-clinic/pet-clinic-web/pom.xml
+++ b/Project-sfg-pet-clinic/pet-clinic-web/pom.xml
@@ -62,15 +62,20 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-<!-- 			<exclusions> -->
-<!-- 	<exclusion> -->
-<!-- 		<groupId>org.junit.vintage</groupId> -->
-<!-- 		<artifactId>junit-vintage-engine</artifactId> -->
-<!-- 	</exclusion> -->
-<!-- </exclusions> -->
+			<!-- <exclusions> -->
+			<!-- <exclusion> -->
+			<!-- <groupId>org.junit.vintage</groupId> -->
+			<!-- <artifactId>junit-vintage-engine</artifactId> -->
+			<!-- </exclusion> -->
+			<!-- </exclusions> -->
 		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
@@ -97,7 +102,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				 <version>3.0.0-M5</version>
+				<version>3.0.0-M5</version>
 				<configuration>
 					<argLine>-Dfile.encoding=UTF-8 -Xms1024m -Xmx1024m
 						-XX:PermSize=1024m -noverify</argLine>
