--- a/Project-sfg-pet-clinic/pom.xml
+++ b/Project-sfg-pet-clinic/pom.xml
@@ -48,10 +48,13 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.12</version>
 			<scope>provided</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>6.1.5.Final</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
