--- a/Project-sfg-pet-clinic/pet-clinic-data/pom.xml
+++ b/Project-sfg-pet-clinic/pet-clinic-data/pom.xml
@@ -9,8 +9,9 @@
 	</parent>
 	<artifactId>pet-clinic-data</artifactId>
 	<properties>
-		<!-- we want to make a regular data jar not including any main, not a heavyweight 
-			jar though if it's false (default) -->
+		<!-- otherwise it will complain that the main method doesn't exist we want 
+			to make a regular data jar not including any main, not a heavyweight jar 
+			though if it's false (default) -->
 		<spring-boot.repackage.skip>true</spring-boot.repackage.skip>
 	</properties>
 	<dependencies>
@@ -71,26 +72,13 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				 <version>3.0.0-M5</version>
-				<configuration>
-					<argLine>-Dfile.encoding=UTF-8 -Xms1024m -Xmx1024m
-						-XX:PermSize=1024m -noverify</argLine>
-					<!-- <skipTests>true</skipTests> -->
-					<forkedProcessExitTimeoutInSeconds>120</forkedProcessExitTimeoutInSeconds>
-					<testFailureIgnore>true</testFailureIgnore>
-				</configuration>
-				<!-- <dependencies> -->
-				<!-- <dependency> -->
-				<!-- <groupId>org.junit.platform</groupId> -->
-				<!-- <artifactId>junit-platform-surefire-provider</artifactId> -->
-				<!-- <version>1.3.2</version> -->
-				<!-- <scope>compile</scope> -->
-				<!-- </dependency> -->
-				<!-- </dependencies> -->
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
