--- a/Project-sfg-pet-clinic/pet-clinic-web/pom.xml
+++ b/Project-sfg-pet-clinic/pet-clinic-web/pom.xml
@@ -98,28 +98,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M5</version>
-				<configuration>
-					<argLine>-Dfile.encoding=UTF-8 -Xms1024m -Xmx1024m
-						-XX:PermSize=1024m -noverify</argLine>
-					<!-- <skipTests>true</skipTests> -->
-					<forkedProcessExitTimeoutInSeconds>120</forkedProcessExitTimeoutInSeconds>
-					<testFailureIgnore>true</testFailureIgnore>
-				</configuration>
-				<!-- <version>2.19.1</version> -->
-				<!-- <dependencies> -->
-				<!-- <dependency> -->
-				<!-- <groupId>org.junit.platform</groupId> -->
-				<!-- <artifactId>junit-platform-surefire-provider</artifactId> -->
-				<!-- <version>1.3.2</version> -->
-				<!-- <scope>compile</scope> -->
-				<!-- </dependency> -->
-				<!-- </dependencies> -->
-			</plugin>
+			</plugin>			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
@@ -157,7 +136,7 @@
 					<dependency>
 						<groupId>org.mockito</groupId>
 						<artifactId>mockito-core</artifactId>
-						<version>${mockito.version}</version>
+						<version>2.23.0</version>
 					</dependency>
 				</dependencies>
 			</plugin>
