--- a/11-spring-boot-mysql/pom.xml
+++ b/11-spring-boot-mysql/pom.xml
@@ -65,6 +65,11 @@
 			<version>3.5.1</version>
 		</dependency>
 		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
