Added a dockerised mysql db and also profiles for dev and prod

--- a/11-spring-boot-mysql/src/main/resources/application-dev.yml
+++ b/11-spring-boot-mysql/src/main/resources/application-dev.yml
@@ -3,9 +3,18 @@ spring:
     url: jdbc:mysql://localhost:3306/sfg_dev
     username: sfg_dev_user
     password: pass
+    platform: mysql
   jpa:
+    show-sql: true
     hibernate:
       ddl-auto: validate
       database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
-      database: mysql
-      show-sql: true
+      database: mysql    
+#      properties:
+#        javax:
+#          persistence:
+#            schema-generation:
+#              create-source: metadata
+#              scripts:
+#                action: create
+#                create-target: database_create.sql
