--- a/11-spring-boot-mysql/src/main/resources/application-prod.yml
+++ b/11-spring-boot-mysql/src/main/resources/application-prod.yml
@@ -2,7 +2,8 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/sfg_prod
     username: sfg_prod_user
-    password: pass
+    password: pass    
+    platform: mysql
   jpa:
     hibernate:
       ddl-auto: validate
