--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,9 @@ version: '3.1'
 services:
   db:
     image: mysql
+    container_name: springboot-db
+    security_opt:
+      - seccomp:unconfined
     restart: always
     volumes:
         - "C:/docker-spring/db:/var/lib/mysql"
