--- a/Maven/7-multiple-modules-project/converters/pom.xml
+++ b/Maven/7-multiple-modules-project/converters/pom.xml
@@ -12,15 +12,11 @@
 
     <artifactId>converters</artifactId>
 
-    <properties>
-        <mapstruct.version>1.2.0.Final</mapstruct.version>
-    </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
-            <version>${mapstruct.version}</version>
+            <!--<version>${mapstruct.version}</version>-->
         </dependency>
         <dependency>
             <groupId>com.mkejeiri</groupId>
