--- a/Maven/7-multiple-modules-project/pom.xml
+++ b/Maven/7-multiple-modules-project/pom.xml
@@ -16,7 +16,6 @@
         <module>web-api</module>
         <module>converters</module>
     </modules>
-
     <properties>
         <revision>1.0-SNAPSHOT</revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -24,7 +23,51 @@
         <java.version>11</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
+        <!--the "down streams" module properties will be centralised here,
+        and modules will inherit them from here-->
+        <mapstruct.version>1.2.0.Final</mapstruct.version>
+        <projectlombok.version>1.18.4</projectlombok.version>
+        <hibernate.version>5.4.0.Final</hibernate.version>
+        <jaxb.version>2.3.0</jaxb.version>
     </properties>
+
+<!--manages the version of all downstream modules dependencies, i.e. jar's lib, except project/module dependencies such as jpa-entities,
+wep-api for converter project. Thus all defined properties inside the "down streams"  module pom.xml will be defined here.
+ and versions modules dependencies will be inherited from here-->
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct</artifactId>
+                <version>${mapstruct.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-core</artifactId>
+                <version>${hibernate.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${projectlombok.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.xml.bind</groupId>
+                <artifactId>jaxb-api</artifactId>
+                <version>${jaxb.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sun.xml.bind</groupId>
+                <artifactId>jaxb-core</artifactId>
+                <version>${jaxb.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sun.xml.bind</groupId>
+                <artifactId>jaxb-impl</artifactId>
+                <version>${jaxb.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <plugins>
